# solana-readonly-account

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
src/: keyed.rs  lib.rs  program.rs  sdk.rs
