[package]
name = "solana-readonly-account"
description = "Readonly solana account field getter traits that work for both on-chain AccountInfos and off-chain Accounts"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/solana-readonly-account.git"
readme = "README.md"
keywords = ["sanctum", "solana", "account", "generics"]
categories = ["rust-patterns"]

include = ["/src", "/README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
solana-sdk = ["dep:solana-sdk"]

[dependencies]
solana-program ="^1"
solana-sdk = { version = "^1", optional = true }

[dev-dependencies]
spl-token-2022 = "^0.7"
